# demcem4py

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
demcem4py/: demcem4py.cpp
demcem4py/test/: CMakeLists.txt  demcem_example_runner.cpp  test_binding.py
