[build-system]
requires = [
    "scikit-build-core",
    "pybind11>=2.6.1",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "demcem4py"
description = "Python wrapper of DEMCEM (https://github.com/thanospol/DEMCEM) for computing singular integrals in EM surface integrals"
version = "0.1.0"
authors = [{name = "Niklas Wingren"}]
license.file = "COPYING"