[build-system]
requires = [
    "scikit-build-core",
    "pybind11>=2.6.1",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "demcem4py"
description = "Python wrapper of DEMCEM (https://github.com/thanospol/DEMCEM) for computing singular integrals in EM surface integrals"
version = "1.1.0"
authors = [{name = "Niklas Wingren"}]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]
dependencies = [
    "pybind11>=2.6.1",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/nwingren/demcem4py"